style.css
:root {
  --main-color: rgb(162, 202, 192);
}

body {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  background: linear-gradient(180deg, rgb(231, 231, 231), white);
  height: 100%;
  margin: 0;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

h1 {
  margin-bottom: 40px;
  text-align: center;
}

.container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-auto-rows: 15vw;
  gap: 0.5vw;
  width: 60vw;
  min-height: 15vw;
  margin: auto;
  margin-bottom: 40px;
  border: 2px solid var(--main-color);
  padding: 10px;
  border-radius: 15px;
}

.book {
  background-color: rgb(185, 204, 199);
  display: flex;
  flex-flow: wrap column;
  font-size: 1rem;
  align-items: start;
  justify-content: center;
  border-radius: 15px;
  padding: 10px;
  position: relative;
}

.new-book {
  display: block;
  margin: 40px auto;
  font-size: 1.2rem;
  min-width: 145px;
  padding: 10px;
  border-radius: 15px;
  border: 2px solid var(--main-color);
  background-color: rgb(198, 255, 236);
}

.new-book:hover,
.add-book:hover {
  cursor: pointer;
  background-color: rgb(162, 202, 192);
  transition: 500ms;
}

.new-book:active,
.add-book:active {
  background-color: rgb(66, 126, 245);
  transition: 200ms;
}

.form-div {
  display: flex;
  flex-direction: column;
}

input {
  width: 300px;
  margin-bottom: 10px;
  border-radius: 15px;
  padding-left: 15px;
  border: 2px solid var(--main-color);
  background-color: transparent;
}

input:focus {
  background-color: rgba(198, 255, 236, 0.427);
  outline: rgba(198, 255, 236, 0.427);

}

div.form {
  text-align: center;
  margin: 40px auto;
}

form
{
    display: inline-block;
    margin-left: auto;
    margin-right: auto;
    text-align: left;
    margin-bottom: 40px;
}

input::placeholder {
  color: rgb(211, 211, 211);
}

input[type="checkbox"] {
  vertical-align: middle;
  height: 20px;
  width: 20px;
  margin-left: 20px;
}

.checkbox-div {
  display: flex;
  margin-left: 10px;
}
form > div >label {
  margin-left: 10px;
}

.add-book {
  margin-top: 10px;
  border: 2px solid var(--main-color);
  background-color: transparent;
  margin-top: 20px;
  border-radius: 15px;
}

.toggle-status {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 30px;
  border: none;
  border-bottom-left-radius: 15px;
  border-bottom-right-radius: 15px;
  border-top: 3px solid rgb(255, 130, 130);
  background-color: silver;
}
.toggle-status:hover {
  background-color: rgb(185, 204, 199);
  cursor: pointer;
  transition-duration: 0.4s;

}

.remove-book {
  position: absolute;
  top: 5px;
  right: 5px;
  width: 25px;
  height: 25px;
  border-radius: 5px;
  text-decoration: none;
  background: transparent;
  box-shadow: none;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  &:before, &:after {
    content: "";
    display: block;
    position: absolute;
    left: 50%;
    top: 50%;
    background-color: #ffffff;
    width: 100%;
    height: 2px;
    transition: height .2s ease-out;
    border-radius: 3px;
  }
  &:before {
    transform: translate(-50%, -50%) rotate(45deg);
  }
  &:after {
    transform: translate(-50%, -50%) rotate(-45deg);
  }
  &:hover, &:focus {
    &:before, &:after {
      height: 4px;
    }
  }
}

.remove-book:hover {
  background-color: rgb(255, 117, 117);
  transition: 0.5s;
}

